--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -26,8 +26,9 @@ jobs:
         with:
           python-version: "3.11"
           cache: "pip"
+          cache-dependency-path: requirements.txt
       - name: Install dependencies
-        run: pip install mkdocs-material
+        run: pip install -r requirements.txt
       - name: Build site
         run: mkdocs build
       - name: Upload Pages artifact
